extends Control

var selected_map = "Map1"
	

func _ready():
	pass


func _process(_delta):
	pass


func _on_map_1_pressed():
	selected_map = "Map1"


func _on_map_2_pressed():
	selected_map = "Map2"


func _on_map_3_pressed():
	selected_map = "Map3"


func _on_map_4_pressed():
	selected_map = "Map4"
